--- a/enricher/src/main/resources/application.conf
+++ b/enricher/src/main/resources/application.conf
@@ -12,20 +12,20 @@ scala {
 spark {
   version = "1.6.0"
   name = "LogsEnricher"
-  remote {
+  def {
     master = "yarn-cluster"
   }
-  local {
+  debug {
     master = "local[4]"
   }
 }
 hdfs {
   version = "2.9.0"
-  remote {
+  def {
     node = "hdfs://quickstart.cloudera:8020/"
     files = "raw_data/nginx_logs/"
   }
-  local {
+  debug {
     node = "D:\\Progs\\LerningProg\\spark\\spark-nginx-logs-handler\\"
     files = "enricher\\files\\"
   }
