Processor fixed. Hive recorder added. Driver context fixed.

--- a/enricher/src/main/resources/application.conf
+++ b/enricher/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 app {
   name = "LogsEnricher"
-  version = "1.0.0.f2"
-  main = "com.prb.dnhs.Main"
+  version = "1.0.0.f3"
+  main = "com.prb.dnhs.MainApp"
 }
 scopt {
   version = "3.7.0"
@@ -12,7 +12,7 @@ scala {
 spark {
   version = "1.6.0"
   name = "LogsEnricher"
-  def {
+  prod {
     master = "yarn-cluster"
   }
   debug {
@@ -21,7 +21,7 @@ spark {
 }
 hdfs {
   version = "2.9.0"
-  def {
+  prod {
     node = "hdfs://quickstart.cloudera:8020/"
     files = "raw_data/nginx_logs/"
   }
@@ -31,5 +31,5 @@ hdfs {
   }
 }
 parquet {
-  schemas = "src/main/resources/schemas/"
+  schemas = "src/main/resources/schemasImpl/"
 }
