--- a/enricher/src/main/resources/application.conf
+++ b/enricher/src/main/resources/application.conf
@@ -3,33 +3,36 @@ app {
   version = "1.0.0.f3"
   main = "com.prb.dnhs.MainApp"
 }
-scopt {
-  version = "3.7.0"
-}
 scala {
   version = "2.11.11"
 }
 spark {
-  version = "1.6.0"
-  name = "LogsEnricher"
-  prod {
-    master = "yarn-cluster"
-  }
-  debug {
-    master = "local[8]"
-  }
+  version = "2.2.0"
+  master = "local[4]"
 }
 hdfs {
   version = "2.9.0"
-  prod {
-    node = "hdfs://quickstart.cloudera:8020/"
-    files = "raw_data/nginx_logs/"
-  }
-  debug {
-    node = "D:\\Progs\\LerningProg\\spark\\spark-nginx-logs-handler\\"
-    files = "enricher\\files\\"
-  }
+  node = "hdfs://quickstart.cloudera:8020/"
+  files = "raw_data/nginx_logs/"
 }
-parquet {
-  schemas = "src/main/resources/schemasImpl/"
+schemas {
+  pathTo = "src/main/resources/schemas/"
+  type = "parquet"
+  event {
+    generic {
+      name = "generic-event"
+    }
+    retarget {
+      name = "rt"
+      filename = "rt.parquet"
+    }
+    impression {
+      name = "impr"
+      filename = "impr.parquet"
+    }
+    click {
+      name = "clk"
+      filename = "clk.parquet"
+    }
+  }
 }
