Add simple hadoop fs config.

--- a/enricher/src/main/resources/application.conf
+++ b/enricher/src/main/resources/application.conf
@@ -11,6 +11,7 @@ spark {
   master = "local[4]"
 }
 hdfs {
+  user = "hdfs"
   version = "2.9.0"
   node = "hdfs://quickstart.cloudera:8020/"
   files = "raw_data/nginx_logs/"
