Add hdfs folder parser.

--- a/enricher/src/main/resources/application.conf
+++ b/enricher/src/main/resources/application.conf
@@ -13,8 +13,8 @@ spark {
 hdfs {
   user = "hdfs"
   version = "2.9.0"
-  node = "hdfs://quickstart.cloudera:8020/"
-  files = "raw_data/nginx_logs/"
+  node = "hdfs://quickstart.cloudera:8020"
+  files = "raw_data/nginx_logs"
 }
 schemas {
   pathTo = "src/main/resources/schemas/"
