--- a/enricher/src/main/resources/application.conf
+++ b/enricher/src/main/resources/application.conf
@@ -16,6 +16,10 @@ hdfs {
   node = "hdfs://quickstart.cloudera:8020"
   files = "raw_data/nginx_logs"
 }
+hive {
+  logTable = "processed_data"
+  batchTable = "processed_batches"
+}
 schemas {
   pathTo = "src/main/resources/schemas/"
   type = "parquet"
