--- a/enricher/src/main/resources/application.conf
+++ b/enricher/src/main/resources/application.conf
@@ -19,6 +19,8 @@ hdfs {
 hive {
   logTable = "processed_data"
   batchTable = "processed_batches"
+  address = "thrift://quickstart.cloudera:9083"
+  // address = "thrift://192.168.80.128:9083"
 }
 schemas {
   pathTo = "src/main/resources/schemas/"
