Feature/spark enricher merged. (#12)
* Add simple hadoop fs config.

* Add hdfs folder parser.

* Comments removed.

* Small fixes.

* Artifact name changed.

* Small fixes.

* Hadoop dependencies fixed with json.

* publishTo chenged.

* Small fixes.

* Small fixes.

* Small fixes.

* Small fixes.

* FS proc fixed.

* Connection with hive2 db was fixed.

--- a/enricher/src/main/resources/application.conf
+++ b/enricher/src/main/resources/application.conf
@@ -11,9 +11,16 @@ spark {
   master = "local[4]"
 }
 hdfs {
+  user = "hdfs"
   version = "2.9.0"
-  node = "hdfs://quickstart.cloudera:8020/"
-  files = "raw_data/nginx_logs/"
+  node = "hdfs://quickstart.cloudera:8020"
+  files = "raw_data/nginx_logs"
+}
+hive {
+  logTable = "processed_data"
+  batchTable = "processed_batches"
+  address = "thrift://quickstart.cloudera:9083"
+  // address = "thrift://192.168.80.128:9083"
 }
 schemas {
   pathTo = "src/main/resources/schemas/"
