--- a/enricher/src/main/resources/application.conf
+++ b/enricher/src/main/resources/application.conf
@@ -1,13 +1,5 @@
-app {
-  name = "LogsEnricher"
-  version = "1.0.0.f4"
-  main = "com.prb.dnhs.MainApp"
-}
-scala {
-  version = "2.11.11"
-}
 spark {
-  version = "2.2.0"
+  appName = "LogsEnricher"
   master = "local[4]"
 }
 hdfs {
@@ -21,25 +13,4 @@ hive {
   batchTable = "processed_batches"
   address = "thrift://quickstart.cloudera:9083"
   // address = "thrift://192.168.80.128:9083"
-}
-schemas {
-  pathTo = "src/main/resources/schemas/"
-  type = "parquet"
-  event {
-    generic {
-      name = "generic-event"
-    }
-    retarget {
-      name = "rt"
-      filename = "rt.parquet"
-    }
-    impression {
-      name = "impr"
-      filename = "impr.parquet"
-    }
-    click {
-      name = "clk"
-      filename = "clk.parquet"
-    }
-  }
 }
