--- a/enricher/src/main/resources/application.conf
+++ b/enricher/src/main/resources/application.conf
@@ -9,7 +9,10 @@ hdfs {
   files = "raw_data/nginx_logs"
 }
 hive {
-  logTable = "processed_data"
+  table = "processed_data"
   address = "thrift://quickstart.cloudera:9083"
   // address = "thrift://192.168.80.131:9083"
+}
+hbase{
+  table = "user_segments"
 }
