Massive regression of dependencies.

--- a/enricher/src/main/resources/application.conf
+++ b/enricher/src/main/resources/application.conf
@@ -14,5 +14,7 @@ hive {
   // address = "thrift://192.168.80.131:9083"
 }
 hbase{
-  table = "user_segments"
+  table = "User_segments"
+  family = "SegmentsFamily"
+  qualifier = "US"
 }
