--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ enricher/target/*
 enricher/metastore_db/*
 enricher/spark-warehouse/*
 enricher/ITest/*
+aggregator/.idea/
+aggregator/files/*
+aggregator/project/target/*
+aggregator/target/*
+aggregator/metastore_db/*
+aggregator/spark-warehouse/*
