--- a/aggregator/src/main/resources/application.conf
+++ b/aggregator/src/main/resources/application.conf
@@ -3,8 +3,8 @@ app {
   version = "1.0.0"
 }
 spark {
-  appName = "LogsAggregator"
-  master = "local[4]"
+  name = "LogsAggregator"
+  master = "local[*]"
 }
 hdfs {
   user = "hdfs"
